--- a/solution/package.json
+++ b/solution/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
